# NearMiss

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  FASTAPI_SETUP.md  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: API_USAGE.md  FASTAPI_QUICKSTART.md  QUICKSTART_UI.md  STREAMLIT_UI_GUIDE.md
examples/: api_usage_example.md
src/: start_all.py  start_api_server.py  start_ui.py
src/app/: app.py
src/cli/: data_creation.py  model_pred_test.py  train_model.py
src/ml/: __init__.py
src/ml/data/: __init__.py  dataset.py
src/ml/evaluation/: __init__.py  full_model_eval.py
src/ml/models/: __init__.py  approach_stage.py  filter_stage.py  full_model.py  likelihood_stage.py  stage.py
src/ml/utils/: __init__.py
src/ml/utils/helpers/: __init__.py  _evaluation_loop.py  _train_loop.py
src/nearmiss/: __init__.py
src/nearmiss/astro/: __init__.py  close_approach_algorithm.py  close_approach_algorithm_sgp4.py  tle_parser.py
src/nearmiss/data/: __init__.py  data_retrieve.py  raw_tle_data_processer.py
src/nearmiss/data/configs/: attributes.yaml  celestrak.yaml
src/nearmiss/utils/: __init__.py
src/nearmiss/utils/_astro/: __init__.py  _constants.py  _coordinate_transformation.py  _core_astro.py  _dataclasses.py  _filters.py  _helpers.py  _sgp4.py  _time.py
src/nearmiss/utils/_math/: __init__.py  _polynomial_approximators.py
src/nearmiss/utils/_yaml/: __init__.py  _read_yaml.py
src/tests/: test_close_approach_algorithm_sgp4.py  test_data_retrieve.py  test_filters.py  test_helpers.py  test_sgp4_utils.py  test_time_utils.py  test_tle_parser.py
src/ui/: streamlit_app.py
tests/: test_api.py
