[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NearMiss"
version = "0.1"
description = "A deep learning system that predicts satellite collision risks by combining orbital mechanics data with ML-based forecasting of orbital uncertainties."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Om Yeole" }
]
requires-python = ">=3.12"

dependencies = [
    "numpy>=1.26,<2.0",
    "scipy>=1.10",
    "astropy>=5.3,<6.0",
    "poliastro @ git+https://github.com/poliastro/poliastro.git@21fd7719e89a7d22b4eac63141a60a7f1b01768c",
    "sgp4>=2.20",
    "torch==2.9.0+cu128",
    "torchvision==0.24.0+cu128",
    "scikit-learn==1.7.2",
    "fastapi==0.127.0",
    "uvicorn==",
    "unicorn==0.40.0",
    "gunicorn==23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "pre-commit",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]